fixed dark mode and other styling

--- a/src/pages/forums/forums.scss
+++ b/src/pages/forums/forums.scss
@@ -32,6 +32,28 @@
       }
     }
 
+    .search-wrapper {
+      width: 100%;
+      height: 40px;
+      display: flex;
+      align-items: center;
+
+      .filter-forum {
+        width: 93%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+        .filter-dropdown{
+          padding: 5px 10px;
+          font-size: 12px;
+          border: 1px solid #e6e6e6;
+          background-color: transparent;
+          color: #999;
+        }
+      }
+    }
+
     .grid-main {
       width: 90%;
       display: flex;
